# selenium_ai_self_healing_locator

./: .env  .gitignore  README.md  blackbox_mcp_settings.json  main.py  pyproject.toml  temp_work_todo.md  work_to_do.md
pages/: sauce_login_page.py
tests/: test_sauce_login.py
utils/: llm_client.py  locator_cache.py  webdriver_extensions.py  webdriver_factory.py
