[project]
name = "selenium-ai-self-healing-locators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "selenium>=4.43.0",
    "webdriver-manager>=4.0.2",
]
